Feat: refactor & config properties profile desafio itau